export interface LinkObject {
  href: string;
  templated?: boolean;
}
