@startuml
class ResourceObject {
}

class EmbeddedResources
class ResourceLinks
class LinkObject {
    href: string
    templated?: boolean
}

ResourceObject ..> "0..1" ResourceLinks : _links
ResourceLinks ..> "1..*" LinkObject : [linkRelation]

ResourceObject ..> "0..1" EmbeddedResources : _embedded
EmbeddedResources ..> "1.*" ResourceObject : [linkRelation]

HalDocument --|> ResourceObject

note right of LinkObject
    The HAL specification allows much more properties,
    but we expect only these.
end note
note right of ResourceLinks
    The link relation "self" is always expected.
    Also we never expect an array of link objects,
    even though this is allowed in HAL.
end note

@enduml
